# make_base64

./: Cargo.toml  LICENSE  README.md
b64-bench/: .gitignore  Cargo.toml
b64-bench/src/: main.rs
benches/: base64.rs  reference.rs
src/: lib.rs
