[package]
name = "make_base64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
human_bytes = "0.4.1"

[[bench]]
name = "base64"
harness = false

